[gd_scene load_steps=6 format=3 uid="uid://cxr21r3qi1u3q"]

[ext_resource type="Script" path="res://Scene/DisasterSys/disasterItem.gd" id="1_w1pul"]
[ext_resource type="Texture2D" uid="uid://7lnklxgva7pn" path="res://Asset/ui/panel_Example1.png" id="2_2cu8o"]
[ext_resource type="Texture2D" uid="uid://co4gx5oho7htc" path="res://Asset/城镇建筑/演武场1.png" id="3_6o6ox"]
[ext_resource type="Theme" uid="uid://bd3x65u7e06d8" path="res://new_theme.tres" id="5_qcrwr"]
[ext_resource type="Texture2D" uid="uid://bb76dl3aocsjo" path="res://addons/ui_extensions/dropdown/Arrow.svg" id="6_d634v"]

[node name="Control" type="Control"]
layout_mode = 3
anchor_right = 0.2
anchor_bottom = 0.589
offset_right = 14.0
offset_bottom = 18.8799
size_flags_horizontal = 0
script = ExtResource("1_w1pul")
namelv = "1111111111111111111111111111111111111"

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 176.0
offset_right = 463.0
offset_bottom = 495.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_2cu8o")
region_rect = Rect2(27.3333, 26.3333, 397.333, 98.2222)
patch_margin_left = 12
patch_margin_top = 19
patch_margin_right = 14
patch_margin_bottom = 14

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 125.0
offset_top = 181.0
offset_right = 447.0
offset_bottom = 481.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_6o6ox")
expand_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 124.0
offset_top = 291.0
offset_right = 288.0
offset_bottom = 332.0

[node name="context" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -4.0
offset_top = 2.0
offset_right = 167.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 23
text = "11111111111"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="haveGrain" type="Label" parent="."]
layout_mode = 0
offset_left = 26.0
offset_top = 388.0
offset_right = 384.0
offset_bottom = 418.0
theme_override_colors/font_color = Color(0.47451, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "已有粮食数量：5"
horizontal_alignment = 1
autowrap_mode = 3

[node name="detail3" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 421.0
offset_right = 371.0
offset_bottom = 682.0
theme_override_font_sizes/font_size = 25
autowrap_mode = 3

[node name="buttons3" type="TextEdit" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 101.0
offset_top = 343.0
offset_right = 129.0
offset_bottom = 380.0
theme = ExtResource("5_qcrwr")
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 21
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false

[node name="downBtn" type="TextureButton" parent="buttons3"]
layout_mode = 0
offset_left = 5.0
offset_top = 17.0
offset_right = 22.0
offset_bottom = 33.0
texture_normal = ExtResource("6_d634v")

[node name="upBtn" type="TextureButton" parent="buttons3"]
layout_mode = 0
offset_left = 6.0
offset_top = 1.0
offset_right = 22.0
offset_bottom = 17.0
texture_normal = ExtResource("6_d634v")
flip_v = true

[node name="TextEdit3" type="TextEdit" parent="."]
layout_direction = 3
layout_mode = 0
offset_left = 128.0
offset_top = 343.0
offset_right = 279.0
offset_bottom = 380.0
theme = ExtResource("5_qcrwr")
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 21
placeholder_text = "分配数量：0"

[connection signal="button_down" from="buttons3/downBtn" to="." method="_on_down_btn_button_down"]
[connection signal="button_down" from="buttons3/upBtn" to="." method="_on_up_btn_button_down"]
[connection signal="text_changed" from="TextEdit3" to="." method="_on_text_edit_3_text_changed"]
